feat: implementação da url: -http://localhost:8080/comparisons?tickers=PETR4,VALE3&from=2026-08-01&to=2026-09-03&includeSeries=true
